fix: filter button displays full width on firefox

--- a/src/components/apiFilters/ApiFilters.scss
+++ b/src/components/apiFilters/ApiFilters.scss
@@ -18,6 +18,7 @@
   right: 0;
   z-index: 101;
   padding: 2.4rem 1.6rem !important;
+  width: 100% !important; // firefox bug
 }
 
 .filters-toggle-icon {
